# ROS2-AI-Chat

ros2_qa_ws/: .gitignore  README.md  auto_build_and_run.sh
ros2_qa_ws/src/ros2_qa_assistant/: package.xml  setup.cfg  setup.py
ros2_qa_ws/src/ros2_qa_assistant/config/: knowledge_base.json  rosbridge_qos.yaml
ros2_qa_ws/src/ros2_qa_assistant/launch/: qa_assistant_launch.py
ros2_qa_ws/src/ros2_qa_assistant/resource/: ros2_qa_assistant
ros2_qa_ws/src/ros2_qa_assistant/ros2_qa_assistant/: knowledge_base_server.py  output_manager_node.py  qa_core_node.py  qa_logger.py  web_input_node.py
ros2_qa_ws/src/ros2_qa_assistant/test/: test_imports.py
ros2_qa_ws/src/ros2_qa_assistant/web/: index.html  ros2_qa.js  style.css
